--- a/src/assets/style/_style.scss
+++ b/src/assets/style/_style.scss
@@ -5962,9 +5962,11 @@ body {
   
   .candidates-details-area .candidates-details-sidebar .candidates-widget .overview li {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 17px;
     color: #1a1a1a;
     margin-bottom: 15px;
+    word-break: break-all;
+    overflow: hidden;
   }
   
   .candidates-details-area .candidates-details-sidebar .candidates-widget .overview li:last-child {
